<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.smartcity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_service"
        android:name="com.example.smartcity.ui.service.ServiceFragment"
        android:label="@string/title_service"
        tools:layout="@layout/service_fragment" />
    <fragment
        android:id="@+id/navigation_test"
        android:name="com.example.smartcity.ui.test.TestFragment"
        android:label="@string/title_test"
        tools:layout="@layout/test_fragment" />
    <fragment
        android:id="@+id/navigation_data"
        android:name="com.example.smartcity.ui.data.DataFragment"
        android:label="@string/title_data"
        tools:layout="@layout/data_fragment" />
    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.smartcity.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/user_fragment" />

</navigation>